# tiny_cpp_projects

./: .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  README.md
cmake/: CLangFormat.cmake  CLangTidy.cmake  CodeCoverage.cmake  Sanitizers.cmake  Target.cmake  Torch.cmake
projects/rdma_comm/: CMakeLists.txt  READEME.md  setup.py
projects/rdma_comm/csrc/client/: connection.pool.h
projects/rdma_comm/csrc/utils/: epoll.h
projects/rdma_comm/src/client/: client.cc
projects/rdma_comm/src/utils/: CMakeLists.txt  epoll.cc  epoll.h
projects/webserver/: CMakeLists.txt  README.md
projects/webserver/cmd/: build.sh  test_logger.sh
projects/webserver/cmd/tests/: test_cpp.sh  test_epoll.sh  test_logger.sh  test_socket.sh
projects/webserver/src/: CMakeLists.txt
projects/webserver/src/client/: CMakeLists.txt  client.cc  client.h  connection_pool.h
projects/webserver/src/indexing/: CMakeLists.txt
projects/webserver/src/server/: CMakeLists.txt  server.cc  server.h
projects/webserver/src/utils/: CMakeLists.txt  epoll.cc  epoll.h  socket.cc  socket.h  stream_logger.h  util.h  util.hpp
projects/webserver/tests/: CMakeLists.txt
projects/webserver/tests/normal/: test_cpp.cc
projects/webserver/tests/utils/: test_epoll.cc  test_logger.cc  test_socket.cc
